--- a/.eslintrc
+++ b/.eslintrc
@@ -14,7 +14,8 @@
   },
   "extends": [
     "plugin:@typescript-eslint/recommended", // Uses the recommended rules from the @typescript-eslint/eslint-plugin
-    "plugin:react/recommended" // Uses the recommended rules from @eslint-plugin-react
+    "plugin:react/recommended", // Uses the recommended rules from @eslint-plugin-react
+    "prettier/@typescript-eslint" // Uses eslint-config-prettier to disable ESLint rules from @typescript-eslint/eslint-plugin that would conflict with prettier
   ],
   "rules": {}
 }
